<resources>
    <string name="app_name">Сергей Павловский</string>

    <string name="rating_val">1</string>
    <string name="rating_text">Рейтинг</string>

    <string name="count_val">357</string>
    <string name="count_text">Написано строк кода</string>

    <string name="projects_val">9</string>
    <string name="projects_text">Проектов</string>

    <string name="phone_hint">Мобильный телефон</string>
    <string name="phone_number">+7(937)117-00-00</string>

    <string name="e_mail">ps-am@mail.ru</string>

    <string name="vkprofile_hint">Профиль в ВК</string>
    <string name="vkprofile_link">vk.com/id184672510</string>

    <string name="repo_hint">Репозиторий</string>
    <string name="repo_link">github.com/sergeyprus/DevIntensive</string>

    <string name="about_hint">О себе</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
