<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Header-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:background="@color/grey"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_medium_56"
                    android:orientation="horizontal">

                    <!--Рейтинг-->
                    <LinearLayout
                        style="@style/header_layout"
                        android:layout_weight="0.25">

                        <TextView
                            android:id="@+id/header_rating"
                            style="@style/header_text.count"
                            android:text="@string/rating_val"/>

                        <TextView
                            style="@style/header_text"
                            android:text="@string/rating_text"/>

                    </LinearLayout>

                    <!--Вертикальный разделитель-->
                    <View style="@style/header_separator"/>

                    <!--Написано строк-->
                    <LinearLayout
                        style="@style/header_layout"
                        android:layout_weight="0.5">

                        <TextView
                            android:id="@+id/header_count"
                            style="@style/header_text.count"
                            android:text="@string/count_val"/>

                        <TextView
                            style="@style/header_text"
                            android:text="@string/count_text"/>

                    </LinearLayout>

                    <!--Вертикальный разделитель-->
                    <View style="@style/header_separator"/>

                    <!--Проекты-->
                    <LinearLayout
                        style="@style/header_layout"
                        android:layout_weight="0.25">

                        <TextView
                            android:id="@+id/projects_count"
                            style="@style/header_text.count"
                            android:text="@string/projects_val"/>

                        <TextView
                            style="@style/header_text"
                            android:text="@string/projects_text"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!--Мобильный телефон-->
            <LinearLayout
                style="@style/info_linear_layout">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    style="@style/info_text">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/phone_et"
                            style="@style/info_edit_text"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/phone_hint"
                            android:inputType="phone"
                            android:text="@string/phone_number"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>

            </LinearLayout>

            <!--Горизонтальный разделитель-->
            <View style="@style/horizontal_separator"/>

            <!--E-mail-->
            <LinearLayout
                style="@style/info_linear_layout">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    style="@style/info_text">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email_et"
                            style="@style/info_edit_text"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="e-mail"
                            android:inputType="textEmailAddress"
                            android:text="@string/e_mail"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>

            </LinearLayout>

            <!--Горизонтальный разделитель-->
            <View style="@style/horizontal_separator"/>

            <!--Горизонтальный разделитель-->
            <View style="@style/horizontal_separator"/>

            <!--Профиль ВК-->
            <LinearLayout
                style="@style/info_linear_layout">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk_circle"/>

                <LinearLayout
                    style="@style/info_text">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/vkprofile_et"
                            style="@style/info_edit_text"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/vkprofile_hint"
                            android:inputType="textUri"
                            android:text="@string/vkprofile_link"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye"/>

            </LinearLayout>

            <!--Горизонтальный разделитель-->
            <View style="@style/horizontal_separator"/>

            <!--Репозиторий-->
            <LinearLayout
                style="@style/info_linear_layout">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github_circle"/>

                <LinearLayout
                    style="@style/info_text.multiline">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/repo_et"
                            style="@style/info_edit_text"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/repo_hint"
                            android:inputType="textMultiLine"
                            android:text="@string/repo_link"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye"/>

            </LinearLayout>

            <!--Горизонтальный разделитель-->
            <View style="@style/horizontal_separator"/>

            <!--О себе-->
            <LinearLayout
                style="@style/info_linear_layout">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/account_circle"/>

                <LinearLayout
                    style="@style/info_text.multiline">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/about_et"
                            style="@style/info_edit_text"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/about_hint"
                            android:inputType="textMultiLine"
                            android:text="@string/about_text"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--        <ImageView
                            style="@style/icon.right"
                            android:src="@drawable/eye"/>-->

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
